--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,6 @@
 #deny from all
 #</Files>
 #Options +Indexes
-ErrorDocument 401 ./SP/errors/401.html
-ErrorDocument 403 ./SP/errors/403.html
-ErrorDocument 404 ./SP/errors/404.html
+ErrorDocument 401 errors/401.html
+ErrorDocument 403 errors/403.html
+ErrorDocument 404 errors/404.html
