--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,7 @@
 #deny from all
 #</Files>
 #Options +Indexes
+RewriteEngine On
 ErrorDocument 401 errors/401.html
 ErrorDocument 403 errors/403.html
 ErrorDocument 404 errors/404.html
