--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,5 @@
-#<Files ~ "^.(htaccess|htpasswd)$">
-#deny from all
-#</Files>
-#Options +Indexes
 RewriteEngine On
-ErrorDocument 401 errors/401.html
-ErrorDocument 403 errors/403.html
-ErrorDocument 404 errors/404.html
+
+ErrorDocument 401 /401.html
+ErrorDocument 403 /403.html
+ErrorDocument 404 /404.html
